--- a/package.json
+++ b/package.json
@@ -11,13 +11,30 @@
   "engines": {
     "node": ">=20"
   },
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.js"
+    }
+  },
+  "files": [
+    "dist",
+    "README.md"
+  ],
   "scripts": {
+    "build": "rslib build",
     "test": "rstest",
-    "test:watch": "rstest --watch"
+    "test:watch": "rstest --watch",
+    "format": "biome format --write src/",
+    "lint": "biome lint --fix src/"
   },
   "devDependencies": {
     "@biomejs/biome": "2.3.14",
     "@rslib/core": "0.19.5",
+    "@rspack/core": "0.7.0",
     "@rstest/core": "latest",
     "@sentenel/node-utils": "0.1.3",
     "@types/node": "25.2.1",
