--- a/package.json
+++ b/package.json
@@ -1,44 +1,66 @@
 {
   "name": "barrel-loader",
   "version": "0.1.5",
-  "description": "",
+  "description": "High-performance barrel file loader for webpack/rspack using Rust NAPI bindings",
   "license": "ISC",
-  "author": "arpitarya <arpitarya@users.noreply.github.com>",
-  "private": true,
-  "root": true,
+  "author": "Arpit Arya <arpitarya@users.noreply.github.com>",
   "type": "module",
-  "packageManager": "pnpm@10.28.2",
-  "engines": {
-    "node": ">=20"
-  },
-  "main": "./dist/index.js",
-  "module": "./dist/index.mjs",
+  "main": "./index.cjs",
+  "types": "./index.d.cts",
   "exports": {
     ".": {
-      "types": "./dist/index.d.ts",
-      "import": "./dist/index.mjs",
-      "require": "./dist/index.js"
+      "types": "./index.d.cts",
+      "import": "./index.cjs",
+      "require": "./index.cjs"
+    },
+    "./barrel-loader-utils": {
+      "types": "./barrel-loader-utils.d.cts",
+      "import": "./barrel-loader-utils.cjs",
+      "require": "./barrel-loader-utils.cjs"
     }
   },
   "files": [
-    "dist",
-    "README.md"
+    "index.cjs",
+    "index.d.cts",
+    "barrel-loader-utils.cjs",
+    "barrel-loader-utils.d.cts",
+    "native/",
+    "README.md",
+    "LICENSE"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/arpitarya/barrel-loader.git"
+  },
+  "engines": {
+    "node": ">=18.0.0"
+  },
+  "keywords": [
+    "barrel",
+    "loader",
+    "webpack",
+    "rspack",
+    "rust",
+    "native",
+    "addon",
+    "performance",
+    "optimization"
   ],
   "scripts": {
-    "build": "rslib build",
-    "test": "rstest",
-    "test:watch": "rstest --watch",
-    "format": "biome format --write src/",
-    "lint": "biome lint --fix src/"
+    "build": "node -e \"const script = process.platform === 'win32' ? 'build.bat' : './build.sh'; require('child_process').execSync(script, { stdio: 'inherit' })\"",
+    "build:debug": "node -e \"const script = process.platform === 'win32' ? 'build.bat --debug' : './build.sh --debug'; require('child_process').execSync(script, { stdio: 'inherit' })\"",
+    "build:clean": "node -e \"const script = process.platform === 'win32' ? 'build.bat --clean' : './build.sh --clean'; require('child_process').execSync(script, { stdio: 'inherit' })\"",
+    "clean": "node -e \"const script = process.platform === 'win32' ? 'clean.bat' : './clean.sh'; require('child_process').execSync(script, { stdio: 'inherit' })\"",
+    "clean:deps": "node -e \"const script = process.platform === 'win32' ? 'clean.bat --deps' : './clean.sh --deps'; require('child_process').execSync(script, { stdio: 'inherit' })\"",
+    "clean:all": "node -e \"const script = process.platform === 'win32' ? 'clean.bat --all' : './clean.sh --all'; require('child_process').execSync(script, { stdio: 'inherit' })\"",
+    "clean:verbose": "node -e \"const script = process.platform === 'win32' ? 'clean.bat --verbose' : './clean.sh --verbose'; require('child_process').execSync(script, { stdio: 'inherit' })\"",
+    "test": "node test.cjs",
+    "lint": "cargo clippy --all-targets -- -D warnings",
+    "lint:fix": "cargo clippy --all-targets --fix --allow-dirty --allow-staged",
+    "fmt": "cargo fmt --all",
+    "fmt:check": "cargo fmt --all -- --check",
+    "prepublishOnly": "pnpm build"
   },
-  "devDependencies": {
-    "@biomejs/biome": "2.3.14",
-    "@rslib/core": "0.19.5",
-    "@rspack/core": "0.7.0",
-    "@rstest/core": "latest",
-    "@sentenel/node-utils": "0.1.3",
-    "@types/node": "25.2.1",
-    "chalk": "5.6.2",
-    "typescript": "5.9.3"
-  }
+  "devDependencies": {},
+  "packageManager": "pnpm@10.28.2"
 }
