--- a/package.json
+++ b/package.json
@@ -5,25 +5,22 @@
   "license": "ISC",
   "author": "Arpit Arya <arpitarya@users.noreply.github.com>",
   "type": "module",
-  "main": "./index.cjs",
-  "types": "./index.d.cts",
+  "main": "./dist/index.cjs",
+  "types": "./dist/index.d.cts",
   "exports": {
     ".": {
-      "types": "./index.d.cts",
-      "import": "./index.cjs",
-      "require": "./index.cjs"
+      "types": "./dist/index.d.cts",
+      "import": "./dist/index.cjs",
+      "require": "./dist/index.cjs"
     },
     "./barrel-loader-utils": {
-      "types": "./barrel-loader-utils.d.cts",
-      "import": "./barrel-loader-utils.cjs",
-      "require": "./barrel-loader-utils.cjs"
+      "types": "./dist/barrel-loader-utils.d.cts",
+      "import": "./dist/barrel-loader-utils.cjs",
+      "require": "./dist/barrel-loader-utils.cjs"
     }
   },
   "files": [
-    "index.cjs",
-    "index.d.cts",
-    "barrel-loader-utils.cjs",
-    "barrel-loader-utils.d.cts",
+    "dist/",
     "native/",
     "README.md",
     "LICENSE"
@@ -47,7 +44,9 @@
     "optimization"
   ],
   "scripts": {
-    "build": "node -e \"const script = process.platform === 'win32' ? 'build.bat' : './build.sh'; require('child_process').execSync(script, { stdio: 'inherit' })\"",
+    "build": "pnpm build:rust && pnpm build:ts",
+    "build:rust": "node -e \"const script = process.platform === 'win32' ? 'build.bat' : './build.sh'; require('child_process').execSync(script, { stdio: 'inherit' })\"",
+    "build:ts": "rslib build",
     "build:debug": "node -e \"const script = process.platform === 'win32' ? 'build.bat --debug' : './build.sh --debug'; require('child_process').execSync(script, { stdio: 'inherit' })\"",
     "build:clean": "node -e \"const script = process.platform === 'win32' ? 'build.bat --clean' : './build.sh --clean'; require('child_process').execSync(script, { stdio: 'inherit' })\"",
     "clean": "node -e \"const script = process.platform === 'win32' ? 'clean.bat' : './clean.sh'; require('child_process').execSync(script, { stdio: 'inherit' })\"",
@@ -55,12 +54,23 @@
     "clean:all": "node -e \"const script = process.platform === 'win32' ? 'clean.bat --all' : './clean.sh --all'; require('child_process').execSync(script, { stdio: 'inherit' })\"",
     "clean:verbose": "node -e \"const script = process.platform === 'win32' ? 'clean.bat --verbose' : './clean.sh --verbose'; require('child_process').execSync(script, { stdio: 'inherit' })\"",
     "test": "node test.cjs",
-    "lint": "cargo clippy --all-targets -- -D warnings",
-    "lint:fix": "cargo clippy --all-targets --fix --allow-dirty --allow-staged",
-    "fmt": "cargo fmt --all",
-    "fmt:check": "cargo fmt --all -- --check",
+    "test:rust": "cargo test",
+    "lint": "biome lint src && pnpm lint:rust",
+    "lint:ts": "biome lint src",
+    "lint:rust": "cargo clippy --all-targets -- -D warnings",
+    "lint:fix": "biome lint --write src && cargo clippy --all-targets --fix --allow-dirty --allow-staged",
+    "fmt": "biome format --write src && pnpm fmt:rust",
+    "fmt:ts": "biome format --write src",
+    "fmt:rust": "cargo fmt --all",
+    "fmt:check": "biome format src && cargo fmt --all -- --check",
+    "check": "biome check --write src",
     "prepublishOnly": "pnpm build"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@biomejs/biome": "2.3.15",
+    "@rslib/core": "^0.19.6",
+    "@types/node": "^22.10.5",
+    "typescript": "^5.7.3"
+  },
   "packageManager": "pnpm@10.28.2"
 }
