--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ rstest = "0.23"
 
 [lib]
 name = "barrel_loader"
-crate-type = ["cdylib"]
+crate-type = ["cdylib", "rlib"]
 
 [lints.rust]
 unsafe_code = "forbid"
@@ -36,6 +36,9 @@ pedantic = { level = "warn", priority = -1 }
 nursery = { level = "warn", priority = -1 }
 # Performance lints
 perf = { level = "warn", priority = -1 }
+
+# Enforce maximum lines per function
+too_many_lines = "warn"
 
 # Allow some pedantic lints that are too strict
 module_name_repetitions = "allow"
