--- a/clippy.toml
+++ b/clippy.toml
@@ -16,3 +16,10 @@ msrv = "1.70"
 # Additional configuration
 type-complexity-threshold = 250
 single-char-binding-names-threshold = 4
+
+# Maximum lines per function (warning above 50 lines)
+too-many-lines-threshold = 50
+
+# Maximum lines per file
+max-fn-params-bools = 2
+doc-valid-idents = [".."]
