--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,14 +15,74 @@ on:
           - github
 
 jobs:
+  verify-and-test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Setup Rust
+        uses: actions-rust-lang/setup-rust-toolchain@v1
+        with:
+          toolchain: stable
+          components: clippy, rustfmt
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '24'
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 10
+
+      - name: Verify version sync
+        run: |
+          CARGO_VERSION=$(grep '^version = ' Cargo.toml | head -1 | sed 's/version = "\(.*\)"/\1/')
+          PKG_VERSION=$(node -p "require('./package.json').version")
+          if [ "$CARGO_VERSION" != "$PKG_VERSION" ]; then
+            echo "Version mismatch: Cargo.toml ($CARGO_VERSION) != package.json ($PKG_VERSION)"
+            exit 1
+          fi
+          echo "Version sync verified: $CARGO_VERSION"
+
+      - name: Run Rust tests
+        run: cargo test --all-features
+
+      - name: Run Clippy
+        run: cargo clippy --all-features -- -D warnings
+
+      - name: Check Rust formatting
+        run: cargo fmt -- --check
+
+      - name: Install Node dependencies
+        run: pnpm install --frozen-lockfile
+
+      - name: Build project
+        run: pnpm build
+
+      - name: Check for uncommitted changes
+        run: |
+          if [ -n "$(git status --porcelain)" ]; then
+            echo "Uncommitted changes detected!"
+            git status
+            exit 1
+          fi
+
   publish-npm:
     runs-on: ubuntu-latest
+    needs: verify-and-test
     if: github.event_name == 'release' || (github.event_name == 'workflow_dispatch' && github.event.inputs.registry == 'npm')
     permissions:
       id-token: write
       contents: read
     steps:
       - uses: actions/checkout@v4
+
+      - name: Setup Rust
+        uses: actions-rust-lang/setup-rust-toolchain@v1
+        with:
+          toolchain: stable
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -39,19 +99,27 @@ jobs:
         run: pnpm install --frozen-lockfile
 
       - name: Build packages
-        run: pnpm -r build
+        run: pnpm build
 
       - name: Publish to npm
-        run: pnpm -r publish --access public --no-git-checks
+        run: pnpm publish --access public --no-git-checks
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
   publish-github:
     runs-on: ubuntu-latest
+    needs: verify-and-test
     if: github.event_name == 'workflow_dispatch' && github.event.inputs.registry == 'github'
     permissions:
       contents: read
       packages: write
     steps:
       - uses: actions/checkout@v4
+
+      - name: Setup Rust
+        uses: actions-rust-lang/setup-rust-toolchain@v1
+        with:
+          toolchain: stable
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -68,9 +136,9 @@ jobs:
         run: pnpm install --frozen-lockfile
 
       - name: Build packages
-        run: pnpm -r build
+        run: pnpm build
 
       - name: Publish to GitHub Packages
-        run: pnpm -r publish --access public --no-git-checks
+        run: pnpm publish --access public --no-git-checks
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
