ci: use build.sh script in workflows for consistency with local development
- Replace 'pnpm build' with './build.sh' in all workflows
- Ensures CI uses the same build process as local development
- Provides consistency in build configuration and flags
- Applied to ci.yml (test job) and publish.yml (all 3 jobs)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -71,7 +71,7 @@ jobs:
         run: cargo clippy --all-features -- -D warnings
 
       - name: Build project
-        run: pnpm build
+        run: ./build.sh
 
       - name: Run integration tests
         run: node test.cjs
