--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -59,7 +59,7 @@ jobs:
         run: pnpm install --frozen-lockfile
 
       - name: Build project
-        run: pnpm build
+        run: ./build.sh
 
       - name: Check for uncommitted changes
         run: |
@@ -99,7 +99,7 @@ jobs:
         run: pnpm install --frozen-lockfile
 
       - name: Build packages
-        run: pnpm build
+        run: ./build.sh
 
       - name: Publish to npm
         run: pnpm publish --access public --no-git-checks
@@ -136,7 +136,7 @@ jobs:
         run: pnpm install --frozen-lockfile
 
       - name: Build packages
-        run: pnpm build
+        run: ./build.sh
 
       - name: Publish to GitHub Packages
         run: pnpm publish --access public --no-git-checks
