ci: update build scripts

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -3,6 +3,7 @@
 [build]
 # Use incremental compilation for faster rebuilds
 incremental = true
+rustflags = ["-Funsafe-code"]
 
 [target.x86_64-apple-darwin]
 rustflags = ["-C", "link-arg=-undefined", "-C", "link-arg=dynamic_lookup"]
