--- a/clippy.toml
+++ b/clippy.toml
@@ -23,3 +23,18 @@ too-many-lines-threshold = 50
 # Maximum lines per file
 max-fn-params-bools = 2
 doc-valid-idents = [".."]
+
+# Pedantic lints for better code quality
+pedantic = { level = "warn", priority = -1 }
+# Nursery lints (experimental but useful)
+nursery = { level = "warn", priority = -1 }
+# Performance lints
+perf = { level = "warn", priority = -1 }
+
+# Enforce maximum lines per function
+too_many_lines = "warn"
+
+# Allow some pedantic lints that are too strict
+module_name_repetitions = "allow"
+missing_errors_doc = "allow"
+missing_panics_doc = "allow"
